--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <title>Iris Classification</title>
 </head>
 <body>
+<h1> Welcome to Iris </h1>
     <form action="{{ url_for('predict')}}" method="POST">
         Sepal-Length:  <input type="number" name="sepal_length"></br>
         Sepal_Width:   <input type="number" name="sepal_width"></br>
